# fastapi_todo

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fastapi_todo/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastapi_todo/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 605691aff914_create_users_table.py  cdfe90d85729_add_updated_at_in_users_table.py  e0b7f1e7800b_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
